# pg-dispatcher

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.alpine  README.md
.circleci/: config.yml
src/: cli.rs  config.rs  dispatcher.rs  main.rs  thread_pool.rs
tests/config/: example.toml
